add footer icons

--- a/index.html
+++ b/index.html
@@ -258,6 +258,10 @@
     <!-- Footer -->
 
     <footer id="footer">
+      <i class="footer-icons fab fa-twitter"></i>
+      <i class="footer-icons fab fa-facebook-square"></i>
+      <i class="footer-icons fab fa-instagram"></i>
+      <i class="footer-icons fas fa-envelope"></i>
       <p>© Copyright 2022 TinDog</p>
     </footer>
   </body>
