--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
+                <a class="nav-link" href="#cta">Download</a>
               </li>
             </ul>
           </div>
@@ -244,12 +244,15 @@
 
     <section id="cta">
       <h3 class="action-text">Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button" class="btn btn-dark btn-lg download-button">
+      <button
+        type="button"
+        class="cta-download btn btn-dark btn-lg download-button"
+      >
         <i class="fab fa-apple"></i> Download
       </button>
       <button
         type="button"
-        class="btn btn-outline-light btn-lg download-button"
+        class="cta-download btn btn-outline-light btn-lg download-button"
       >
         <i class="fab fa-google-play"></i> Download
       </button>
