fix pricing card spaces

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <section id="pricing">
       <h2>A Plan for Every Dog's Needs</h2>
-      <p>Simple and affordable price plans for your and your dog.</p>
+      <p>Simple and affordable price plans for you and your dog.</p>
       <div class="row">
         <div class="pricing-col col-lg-4 col-md-6">
           <div class="card">
@@ -193,9 +193,11 @@
             </div>
             <div class="card-body">
               <h2>Free</h2>
-              <p>5 Matches Per Day</p>
-              <p>10 Messages Per Day</p>
-              <p>Unlimited App Usage</p>
+              <div class="center-three">
+                <p>5 Matches Per Day</p>
+                <p>10 Messages Per Day</p>
+                <p>Unlimited App Usage</p>
+              </div>
               <button type="button" class="w-100 btn-outline-dark btn-lg">
                 Sign Up
               </button>
@@ -210,9 +212,11 @@
             </div>
             <div class="card-body">
               <h2>$49 / mo</h2>
-              <p>Unlimited Matches</p>
-              <p>Unlimited Messages</p>
-              <p>Unlimited App Usage</p>
+              <div class="center-three">
+                <p>Unlimited Matches</p>
+                <p>Unlimited Messages</p>
+                <p>Unlimited App Usage</p>
+              </div>
               <button type="button" class="w-100 btn-dark btn-lg">
                 Sign Up
               </button>
